# EuchreCardGame

./: CMakeCache.txt  CMakeLists.txt  Dealer.cpp  Dealer.h  Deck.cpp  Deck.h  EuchreCPP  Makefile  Player.cpp  Player.h  PlayerManager.h  README.md  Test.cpp  cmake_install.cmake  gtest.cmake  main  main.cpp  testlib-test
